@@ -5,6 +5,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.jetbrains.kotlin.jvm' version '1.9.22'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 version = property('mod_version')
@@ -13,6 +14,8 @@ group = property('mod_group_id')
 base {
     archivesName = property('mod_id')
 }
+
+jarJar.enable()
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -38,6 +41,7 @@ minecraft {
 
         client {
             property 'forge.enabledGameTestNamespaces', property('mod_id')
+            jvmArgs '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED', '-Dio.netty.tryReflectionSetAccessible=true'
         }
 
         server {
@@ -64,11 +68,30 @@ repositories {
     // ForgeGradle automatically adds the Forge maven and Maven Central
 }
 
+configurations {
+    shade
+    implementation.extendsFrom shade
+    minecraftLibrary
+    implementation.extendsFrom minecraftLibrary
+}
+
 dependencies {
     minecraft "net.minecraftforge:forge:${property('minecraft_version')}-${property('forge_version')}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2"
-    implementation "org.apache.commons:commons-math3:3.6.1"
+    
+    // Kotlin and other libraries
+    def shadeDeps = [
+        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22",
+        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2",
+        "org.apache.commons:commons-math3:3.6.1",
+        "org.semver4j:semver4j:4.3.0"
+    ]
+
+    shadeDeps.each { dep ->
+        shade dep
+        minecraftLibrary(dep) {
+            exclude group: 'org.jetbrains', module: 'annotations'
+        }
+    }
 }
 
 tasks.named('processResources', ProcessResources).configure {
@@ -86,7 +109,25 @@ tasks.named('processResources', ProcessResources).configure {
     }
 }
 
+tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+    archiveClassifier = ''
+    configurations = [project.configurations.shade]
+    relocate 'kotlin', "${project.property('mod_group_id')}.repack.kotlin"
+    relocate 'kotlinx', "${project.property('mod_group_id')}.repack.kotlinx"
+    relocate 'org.apache.commons.math3', "${project.property('mod_group_id')}.repack.math3"
+    relocate 'org.semver4j', "${project.property('mod_group_id')}.repack.semver4j"
+}
+
+reobf {
+    shadowJar {}
+}
+
+tasks.named('build').configure {
+    dependsOn tasks.reobfShadowJar
+}
+
 tasks.named('jar', Jar).configure {
+    archiveClassifier = 'slim'
     manifest {
         attributes([
                 "Specification-Title"     : mod_id,
